new changes button

--- a/formular.html
+++ b/formular.html
@@ -100,14 +100,15 @@
                                 <label class="form-check-label" for="invalidCheck2">Zustimmen und bestätigen</label>
                             </div>
                         </div>
-                        <div class="row">
-                            <div class="col-3">
+                        <div class="row d-inline">
+                            <div class="d-inline p-0">
                                 <button class="btn btn-success" type="submit">Abschicken</button>
                             </div>
-                            <div class="col-3">
+                            <div class="d-inline p-0 ">
                                 <button class="btn btn-primary" type="reset">Reset</button>
                             </div>
-
+                                
+                            
                         </div>
                     </form>
                 </div>
