--- a/formular.html
+++ b/formular.html
@@ -13,6 +13,7 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="formular.js" defer></script> 
 </head>
 
 <body>
@@ -100,7 +101,7 @@
                                 <label class="form-check-label" for="invalidCheck2">Zustimmen und bestätigen</label>
                             </div>
                         </div>
-                        <div class="row d-inline">
+                        <div class="row d-inline-block">
                             <div class="d-inline p-0">
                                 <button class="btn btn-success" type="submit">Abschicken</button>
                             </div>
@@ -185,7 +186,7 @@
         </div>
 
     </footer>
-    <script src="formular.js"></script>
+  
 </body>
 
 </html>
