--- a/index.html
+++ b/index.html
@@ -56,11 +56,10 @@
             <p>Lernen sie Basic Englisch in nur 6 Monaten!</p>
             <p>Klicken sie auf den Teilnehmen Knopf</p>
             <p>Füllen sie das Formular aus</p>
-            <button class="btn btn-danger" type="submit">Teilnehmen<a href="formular.html"
+        <div><button class="btn btn-danger" type="submit">Teilnehmen<a href="formular.html"
                     class="nav-item nav-link"></a></button>
-
-
-        </div>
+            </div>
+                </div>
 
         <!-- Container2 -->
         <div class="p-5 text- center container border">
@@ -73,18 +72,14 @@
             <p>Füllen sie das Formular aus</p>
             <button class="btn btn-primary" type="submit">Teilnehmen<a href="formular.html"
                     class="nav-item nav-link"></a></button>
-
-
         </div>
-
-
 
     </main>
 
     <footer class="text-center text-lg-start bg-light text-muted">
-        <!-- Section: Social media -->
+
         <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
-            <!-- Left -->
+
             <div class="me-5 d-none d-lg-block">
                 <span>Connect us on social networks:</span>
             </div>
@@ -109,23 +104,23 @@
                     <i class="fab fa-github"></i>
                 </a>
             </div>
-            <!-- Right -->
-        </section>
-        <!-- Section: Social media -->
 
-        <!-- Section: Links  -->
+        </section>
+
+
+
         <section class="">
             <div class="container text-center text-md-start mt-5">
-                <!-- Grid row -->
+
                 <div class="row mt-3">
-                    <!-- Grid column -->
+
                     <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4"></div>
-               
 
 
-                    <!-- Grid column -->
+
+
                     <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
-                        <!-- Links -->
+
                         <h6 class="text-uppercase fw-bold mb-4">
                             Kurse
                         </h6>
@@ -137,9 +132,7 @@
                         </p>
 
                     </div>
-                    <!-- Grid column -->
 
-                    <!-- Grid column -->
                     <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
                         <!-- Links -->
                         <h6 class="text-uppercase fw-bold mb-4">
@@ -153,14 +146,13 @@
                         <p><i class="fas fa-phone me-3"></i> + 01 234 567 88</p>
 
                     </div>
-                    <!-- Grid column -->
+
                 </div>
-                <!-- Grid row -->
+
             </div>
         </section>
-        <!-- Section: Links  -->
 
-        <!-- Copyright -->
+
         <div class="text-center p-4" style="background-color: rgba(17, 14, 190, 0.05);">
 
 
