--- a/index.html
+++ b/index.html
@@ -52,10 +52,12 @@
 
             <h1>Kurs 1 Englisch</h1>
             <h1>55 Euro pro Monat</h1><br>
-            <p>Besuchen sie unseren Online Workshop</p>
-            <p>Lernen sie Basic Englisch in nur 6 Monaten!</p>
-            <p>Klicken sie auf den Teilnehmen Knopf</p>
-            <p>Füllen sie das Formular aus</p>
+            <h3>-Besuchen sie unseren Online Workshop</h3>
+            <h3>-Lernen sie Basic Englisch in nur 6 Monaten zb!</h3>
+            <h3>-Lernen sie in ihrem Tempo</h3>
+            <h3>-Lernen sie wann und wo sie wollen</h3><br>
+            <h3>Klicken sie auf den Teilnehmen Knopf</h3>
+            <h3>Füllen sie das Formular aus</h3><br>
         <div><button class="btn btn-danger" type="submit">Teilnehmen<a href="formular.html"
                     class="nav-item nav-link"></a></button>
             </div>
@@ -66,10 +68,12 @@
 
             <h1>Kurs 2 Französisch</h1>
             <h1>55 Euro pro Monat</h1><br>
-            <p>Besuchen sie unseren Online Workshop</p>
-            <p>Lernen sie Französisch in nur 8 Monaten!</p>
-            <p>Klicken sie auf den Teilnehmen Knopf</p>
-            <p>Füllen sie das Formular aus</p>
+            <h3>-Besuchen sie unseren Online Workshop</h3>
+            <h3>-Lernen sie Französisch in nur 8 Monaten zb!</h3>
+            <h3>-Lernen sie in ihrem Tempo</h3>
+            <h3>-Lernen sie wann und wo sie wollen</h3><br>
+            <h3>Klicken sie auf den Teilnehmen Knopf</h3>
+            <h3>Füllen sie das Formular aus</h3><br>
             <button class="btn btn-primary" type="submit">Teilnehmen<a href="formular.html"
                     class="nav-item nav-link"></a></button>
         </div>
@@ -160,5 +164,4 @@
 
     </footer>
 </body>
-
 </html>
